# Eaton

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/Device/: CMakeLists.txt  Device.cc  Device.h
src/Observer/: CMakeLists.txt  Observer.cc  Observer.h
src/ThreadSafeLogger/: CMakeLists.txt  ThreadSafeLogger.h
tests/: CMakeLists.txt  main.cc
