set(DEVICE_LIBRARY_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/Device.cc")
set(DEVICE_LIBRARY_HEADERS
    "${CMAKE_CURRENT_SOURCE_DIR}/Device.h")

add_library(${DEVICE_LIBRARY_NAME} STATIC
    ${DEVICE_LIBRARY_SOURCES}
    ${DEVICE_LIBRARY_HEADERS})
target_link_libraries(
    ${DEVICE_LIBRARY_NAME}
    PRIVATE ${THREAD_SAFE_LIBRARY_NAME}
            ${OBSERVER_LIBRARY_NAME}
)
target_include_directories(${DEVICE_LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})